--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,7 +2,7 @@ spring.application.name=RamroBazar
 
 spring.datasource.url=jdbc:mysql://localhost:3306/ramro_bazar
 spring.datasource.username=root
-spring.datasource.password=10120032#
+spring.datasource.password=grishshrestha
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQLDialect
 spring.jpa.hibernate.ddl-auto=update
@@ -12,3 +12,7 @@ spring.jpa.show-sql=true
 spring.servlet.multipart.max-file-size=50MB
 spring.servlet.multipart.max-request-size=50MB
 spring.servlet.multipart.enabled=true
+
+#manual set username and password for sping security
+spring.security.user.name=admin
+spring.security.user.password=admin@123
