--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -16,3 +16,12 @@ spring.servlet.multipart.enabled=true
 #manual set username and password for sping security
 spring.security.user.name=admin
 spring.security.user.password=admin@123
+
+#spring.security.oauth2.client.registration.google.client-id = 80925649682-j21ipr5bvmno4ei8nj3oo9dgjgqsqetg.apps.googleusercontent.com
+#spring.security.oauth2.client.registration.google.client-secret = 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
+#spring.security.oauth2.client.registration.google.scope = openid,profile,email
+
+#spring.security.oauth2.client.provider.google.authorization-uri=https://accounts.google.com/o/oauth2/auth
+#spring.security.oauth2.client.provider.google.token-uri=https://oauth2.googleapis.com/token
+#spring.security.oauth2.client.provider.google.user-info-uri=https://www.googleapis.com/oauth2/v3/userinfo
+#spring.security.oauth2.client.provider.google.jwk-set-uri=https://www.googleapis.com/oauth2/v3/certs
