--- a/pom.xml
+++ b/pom.xml
@@ -45,6 +45,13 @@
 <!--			<artifactId>spring-security-core</artifactId>-->
 <!--			<version>5.6.0</version> &lt;!&ndash; or the latest version &ndash;&gt;-->
 <!--		</dependency>-->
+		<!-- pom.xml -->
+		<dependency>
+			<groupId>com.cloudinary</groupId>
+			<artifactId>cloudinary-http44</artifactId>
+			<version>1.32.2</version>
+		</dependency>
+
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-oauth2-client</artifactId>
