Done Some Changes By adding Interface for method and implemented in service and controller according to it

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -8,14 +8,12 @@ spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQLDialect
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
 
-# Increase size limits if needed
 spring.servlet.multipart.max-file-size=50MB
 spring.servlet.multipart.max-request-size=50MB
 spring.servlet.multipart.enabled=true
 
-#manual set username and password for sping security
-spring.security.user.name=admin
-spring.security.user.password=admin@123
+#spring.security.user.name=admin
+#spring.security.user.password=admin@123
 
 #spring.security.oauth2.client.registration.google.client-id = 80925649682-j21ipr5bvmno4ei8nj3oo9dgjgqsqetg.apps.googleusercontent.com
 #spring.security.oauth2.client.registration.google.client-secret = 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
